--- a/Feb-21-ex/Progress Tracker/style.css
+++ b/Feb-21-ex/Progress Tracker/style.css
@@ -13,6 +13,11 @@
     height: 25px;
 }
 
+#question{
+    background-color: crimson;
+}
+
+
 .count {
     display: flex;
     justify-content: center;
